# MBD

./: README.md
Advanced Python/Class Exercises/: Procfile  README.md  UI.ipynb  app.py  pyproject.toml  requirements.txt
Advanced Python/Class Exercises/binder/: environment.yml
Advanced Python/Class Exercises/src/ie_utils/: __init__.py
Advanced Python/Class Exercises/tests/: test_ie_utils.py
Advanced Python/Group/: app.py
Advanced Python/Individual/: pyproject.toml
Advanced Python/Individual/reference/: Simple-Bike-Sharing-Analysis.ipynb
Advanced Python/Individual/src/ie_bike_model/: __init__.py  model.py
Advanced Python/Individual/test/: test_model.py
Big Data Architectures/: Final Code.zpln  README.md  Tweets Covid 19 AC
Data Visualization/: FINAL CODE.ipynb  README.md
Forecasting Time Series/: Basic Analysis.R  README.md  SARIMA MODEL.R
Machine Learning II/: FINAL CODE.R  README.md
Machine Learning III/CNN/: 1. Cat vs Dog Image Classification .ipynb  2. Regularization.ipynb  3. Inception V3 for Flowers.ipynb  README.md
Machine Learning III/GAN/: 1. Deep Convolutional GAN.ipynb  2. Generator & Discriminator.ipynb  3. Conditional GAN with Fashion MNIST.ipynb  README.md
NoSQL/: README.md
Python/Group/: Code.ipynb  README.md
Python/Individual/: Code.py  README.md
R Programming/: README.md
Recommendation Engines/: README.md
Reinforcement Learning/: README.md
Stream Processing & Real-Time Analytics/: README.md  bikepoint_producer.py  bikes-db.sql  kafka_consumer_v2.py  streaming_consumer_config.ini  streaming_consumer_join_serving.py
(+16 files in other folders)
